# ovirt-node-ng-image

./: CODEOWNERS  DEVELOPMENT.md  Makefile.am  README.md  autogen.sh  build.sh  configure.ac  ovirt-node-ng.spec.in  stdci.yaml
.devcontainer/almalinux9/: Dockerfile  devcontainer.json
.devcontainer/el9stream/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
automation/: build-artifacts.environment.yaml  build-artifacts.req  build-artifacts.req.el8  build-artifacts.sh  check-merged.req.el8  check-patch.repos.el8  check-patch.repos.el9stream  check-patch.req.el8  packages.required
cbs/: build.cfg.in  build.sh
cbs/sample/: build.cfg  ovirt-node-ng-image.ks  ovirt-node-ng.spec
data/: centos.ks  centos.ks.in  distro-defs.yml  fedora.ks  ovirt-node-ng-image.j2  ovirt-node-ng-image.ks.in  ovirt-osinfo.xml  ovirt.alma.el10.conf  ovirt.conf  ovirt.el9.conf  ovirt.py  ovirt.rocky.el9.conf
data/pixmaps/: sidebar-logo.xcf
scripts/: create-nightly-boot-iso.sh  create-product-img.sh  derive-boot-iso.sh  mktreeinfo.py  renderks.py
scripts/node-setup/: node-install.ks.in  setup-node-appliance.sh
